--- a/scss/general/_header.scss
+++ b/scss/general/_header.scss
@@ -17,7 +17,7 @@ header::before {
     bottom: 0;
     background:
         linear-gradient(rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.7)),
-        url('../../../loretoguesthouse/img/habitaciones/sala-1.jpg');
+        url('/img/habitaciones/sala-1.jpg');
     background-size: cover;
     background-position: 50% 30%;
     background-repeat: no-repeat;
