--- a/scss/general/_main.scss
+++ b/scss/general/_main.scss
@@ -42,7 +42,7 @@
     top: 0; left: 0; right: 0; bottom: 0;
     background:
         linear-gradient(rgba(0,0,0,0.5), rgba(0,0,0,0.5)),
-        url('../../img/habitaciones/martin-pescador.jpg');
+        url('../img/habitaciones/martin-pescador.jpg');
     background-size: cover;
     background-position: 50% 30%;
     background-repeat: no-repeat;
@@ -111,7 +111,7 @@
     top: 0; left: 0; right: 0; bottom: 0;
     background:
         linear-gradient(rgba(0,0,0,0.5), rgba(0,0,0,0.5)),
-        url('../../img/habitaciones/sala-5.jpg');
+        url('../img/habitaciones/sala-5.jpg');
     background-size: cover;
     background-position: 50% 30%;
     background-repeat: no-repeat;
