--- a/css/main.css
+++ b/css/main.css
@@ -22,7 +22,7 @@ header::before {
   left: 0;
   right: 0;
   bottom: 0;
-  background: linear-gradient(rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.7)), url("../../img/habitaciones/sala-1.jpg");
+  background: linear-gradient(rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.7)), url("../img/habitaciones/sala-1.jpg");
   background-size: cover;
   background-position: 50% 30%;
   background-repeat: no-repeat;
@@ -127,7 +127,7 @@ header {
   left: 0;
   right: 0;
   bottom: 0;
-  background: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url("../../img/habitaciones/martin-pescador.jpg");
+  background: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url("../img/habitaciones/martin-pescador.jpg");
   background-size: cover;
   background-position: 50% 30%;
   background-repeat: no-repeat;
@@ -193,7 +193,7 @@ header {
   left: 0;
   right: 0;
   bottom: 0;
-  background: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url("../../img/habitaciones/sala-5.jpg");
+  background: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url("../img/habitaciones/sala-5.jpg");
   background-size: cover;
   background-position: 50% 30%;
   background-repeat: no-repeat;
