--- a/css/main.css
+++ b/css/main.css
@@ -119,6 +119,44 @@ header {
     font-size: 1rem;
   }
 }
+.menu-hamburguesa {
+  display: none;
+}
+
+@media (max-width: 767.98px) {
+  .menu-hamburguesa {
+    display: block;
+  }
+  .nav-header {
+    display: none;
+  }
+}
+@media (min-width: 768px) {
+  .nav-header {
+    display: block;
+  }
+  .menu-hamburguesa {
+    display: none;
+  }
+}
+.nav-header ul {
+  display: flex;
+  flex-direction: row;
+  gap: 20px;
+  list-style: none;
+  padding: 0;
+  margin: 0;
+  align-items: center;
+  justify-content: center;
+}
+
+@media (max-width: 767.98px) {
+  .nav-header ul {
+    flex-direction: column;
+    gap: 10px;
+    align-items: flex-start;
+  }
+}
 .texto-section1 {
   display: flex;
   flex-direction: column;
