--- a/scss/style.scss
+++ b/scss/style.scss
@@ -36,3 +36,9 @@
 
 //import habitaciones 
 @import "./habitaciones/titulo-parrafo";
+
+//import direccion 
+@import "./direccion/estilos";
+
+//import actividades 
+@import "./actividades/actividades-style";
