--- a/scss/inicio/_seccion1-texto.scss
+++ b/scss/inicio/_seccion1-texto.scss
@@ -19,3 +19,34 @@
 .texto-section1 h2 {
     font-size: 3rem;
 }
+
+/*Boton de reserva*/
+.whatsapp-btn {
+    display: inline-flex;
+    align-items: center;
+    justify-content: center;
+    gap: 10px;
+    background: #25D366;
+    color: white !important;
+    padding: 12px 24px;
+    border-radius: 50px; /* Bordes muy redondeados */
+    font-weight: 600;
+    text-decoration: none;
+    transition: all 0.3s;
+    border: 2px solid transparent;
+    box-shadow: 0 4px 6px rgba(0,0,0,0.1);
+    
+    i {
+        font-size: 1.4rem;
+    }
+    
+    &:hover {
+        background: #128C7E;
+        transform: translateY(-2px);
+        box-shadow: 0 6px 12px rgba(0,0,0,0.15);
+    }
+    
+    &:active {
+        transform: scale(0.98);
+    }
+}
