--- a/css/main.css
+++ b/css/main.css
@@ -25,7 +25,7 @@ header::before {
   left: 0;
   right: 0;
   bottom: 0;
-  background: linear-gradient(rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.7)), url("/img/habitaciones/pileta-patio.jpg");
+  background: linear-gradient(rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.7)), url("../../img/habitaciones/pileta-patio.jpg");
   background-size: cover;
   background-position: 50% 30%;
   background-repeat: no-repeat;
@@ -394,10 +394,15 @@ footer img {
   }
 }
 /* --- CARDS Y GALERÍAS --- */
-.card-img-top,
-.carousel-item img {
+.card-img-top {
   width: 100%;
   height: 220px;
+  object-fit: cover;
+}
+
+.carousel-item img {
+  width: 100%;
+  height: 100%;
   object-fit: cover;
 }
 
