--- a/scss/general/_mq.scss
+++ b/scss/general/_mq.scss
@@ -40,10 +40,15 @@
 
 /* --- CARDS Y GALERÍAS --- */
 
-.card-img-top,
-.carousel-item img {
+.card-img-top {
   width: 100%;
   height: 220px;
+  object-fit: cover;
+}
+
+.carousel-item img {
+  width: 100%;
+  height: 100%;
   object-fit: cover;
 }
 
