--- a/scss/general/_mq.scss
+++ b/scss/general/_mq.scss
@@ -53,11 +53,16 @@
 }
 
 @media (max-width: 767.98px) {
-  .card-img-top,
-  .carousel-item img {
+  .card-img-top {
     height: 140px;
   }
+  .carousel-item img {
+    height: 100%;
+  }
+  
 }
+
+
 
 /* --- SECCIONES Y CONTENEDORES --- */
 
