--- a/scss/actividades/_actividades-style.scss
+++ b/scss/actividades/_actividades-style.scss
@@ -5,6 +5,8 @@
   margin-bottom: 2rem;
   margin-top: 10px;
   transition: transform 0.3s;
+  margin-left: 20px;
+  margin-right: 20px;
   
   &:hover {
     transform: translateY(-5px);
