--- a/scss/direccion/_estilos.scss
+++ b/scss/direccion/_estilos.scss
@@ -4,19 +4,6 @@
     text-align: center;
 }
 
-/* Sobrescribe el h2 de Bootstrap */
-h2 {
-  font-size: 2.2rem !important; /* Tamaño personalizado */
-  font-weight: 600 !important;
-}
-
-/* Versión responsiva */
-@media (max-width: 768px) {
-  h2 {
-    font-size: 1.8rem !important;
-  }
-}
-
 /*maps*/
 .mapa-direccion {
     margin:20px;
@@ -34,25 +21,12 @@ h2 {
 }
 
 
-// .titulo-lista {
-//   display: flex;
-//   flex-direction: column;
-//   align-items: flex-start; // Alinea h2 y ul a la izquierda
-//   width: 100%;
-
-//   h2 {
-//     text-align: left;
-//     width: 100%;
-//   }
 
 ul {
   list-style: none;
   margin: 20px 0 0 0;
   padding: 0;
   width: 100%;
+  line-height: 2rem;
 }
 
-//   ul li {
-//     margin-bottom: 16px;
-//   }
-// }
