--- a/scss/inicio/_seccion3-areascomunes.scss
+++ b/scss/inicio/_seccion3-areascomunes.scss
@@ -45,6 +45,10 @@
 
 .texto-section4 p {
     color: #fff;
-    font-size: 1.5rem; // Ajusta el tamaño según prefieras
+    font-size: 2rem; // Ajusta el tamaño según prefieras
     margin-top: 0;
+}
+
+.parrafo-areas-comunes p {
+    font-size: 1.8rem;
 }
