--- a/scss/quienes-somos/_instalaciones.scss
+++ b/scss/quienes-somos/_instalaciones.scss
@@ -47,17 +47,19 @@
 
 .titulo-instalaciones h2 {
     color: #fff;
-    font-size: 5rem; // Ajusta el tamaño según prefieras
+    font-size: 3rem; // Ajusta el tamaño según prefieras
     margin-bottom: 0.5em;
 }
 
 .lista-instalaciones ul {
     list-style: none;
+    margin-bottom: 2rem;
 }
 
 .instalaciones li {
     line-height: 2;
-    font-size: 1.2rem;
+    font-size: 2rem;
+    
 }
 
 
