--- a/scss/general/_header.scss
+++ b/scss/general/_header.scss
@@ -19,7 +19,7 @@ header::before {
     bottom: 0;
     background:
         linear-gradient(rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.7)),
-        url("../img/pileta-patio.jpg");
+        url("../img/pileta-patio-compress.jpg");
     background-size: cover;
     background-position: 50% 30%;
     background-repeat: no-repeat;
