--- a/scss/general/_menu-hamb.scss
+++ b/scss/general/_menu-hamb.scss
@@ -14,6 +14,7 @@
 }
 .hamburger.is-active{
   background-color:none;
+  margin-top: 3rem;
 }
 ._layer{
 	background-color: #009F00;
@@ -57,7 +58,7 @@
 .menuppal{
    background-color: rgba(255, 255, 255, 0.95);
     bottom: 0;
-    height: 50%;
+    height: 57%;
     left: 0;
     overflow-y: scroll;
     position: fixed;
@@ -75,7 +76,6 @@
 	text-align:center;
 	font-family: Verdadna, Arial, Helvetica;
 	font-size:1.5rem;
-	line-height:5px;
 	height:3em;
     color:#369;
 	text-transform:none;
