--- a/scss/general/_mq.scss
+++ b/scss/general/_mq.scss
@@ -105,8 +105,9 @@
     font-size: 2rem;
     margin-top: 32px;
   }
+  .texto-section1 p,
   .texto-header p {
-    font-size: 1rem;
+    font-size: 1.8rem;
     margin-top: 32px;
   }
 }
