--- a/css/main.css
+++ b/css/main.css
@@ -261,7 +261,7 @@ footer img {
 
 .texto-section2 p {
   color: #fff;
-  font-size: 1.5rem;
+  font-size: 2rem;
   margin-top: 0;
 }
 
@@ -462,8 +462,9 @@ footer img {
     font-size: 2rem;
     margin-top: 32px;
   }
+  .texto-section1 p,
   .texto-header p {
-    font-size: 1rem;
+    font-size: 1.8rem;
     margin-top: 32px;
   }
 }
@@ -614,7 +615,7 @@ h2 {
   left: 0;
   right: 0;
   bottom: 0;
-  background: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url("../../img/sala-1.jpg");
+  background: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url("../img/sala-1.jpg");
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
@@ -806,7 +807,7 @@ ul {
 
 .hamburger.is-active {
   background-color: none;
-  margin-top: 3rem;
+  margin-top: 2rem;
 }
 
 ._layer {
@@ -857,7 +858,7 @@ ul {
 .menuppal {
   background-color: rgba(255, 255, 255, 0.95);
   bottom: 0;
-  height: 57%;
+  height: 45%;
   left: 0;
   overflow-y: scroll;
   position: fixed;
