--- a/scss/quienes-somos/_instalaciones.scss
+++ b/scss/quienes-somos/_instalaciones.scss
@@ -26,7 +26,7 @@
     top: 0; left: 0; right: 0; bottom: 0;
     background:
         linear-gradient(rgba(0,0,0,0.5), rgba(0,0,0,0.5)),
-        url('../../img/sala-1.jpg');
+        url('../img/sala-1.jpg');
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
