--- a/scss/quienes-somos/_texto-principal.scss
+++ b/scss/quienes-somos/_texto-principal.scss
@@ -12,9 +12,10 @@
 
 .texto-principal p {
     line-height: 2;
-    font-size: 1.8rem;
+    font-size: 1.5rem;
 }
 
 .texto-principal h2 {
     font-size: 3rem;
+    margin: 40px;
 }
